--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,22 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/joda-time-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-broker-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-client-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-console-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-jaas-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-kahadb-store-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-openwire-legacy-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-protobuf-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-spring-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/activemq-web-5.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-j2ee-management_1.1_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-jms_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-jta_1.0.1B_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/hawtbuf-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.6.6.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.6.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.6.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
