--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.6.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.6.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/kerry/projects/nyu/java_workspace/FinancialComputing/lib/orderGenerator"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
